force-app/main/default/objects/KimbleOne__RollupDefinitionCriterion__c/KimbleOne__RollupDefinitionCriterion__c.object-meta.xml
<CustomObject>
    <label>Rollup Definition Criterion</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Rollup Definition Criterion Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Definition Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>