force-app/main/default/objects/KimbleOne__RollupDefinitionCriterion__c/fields/KimbleOne__RollupDefinition__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RollupDefinition__c</fullName>
    <label>Rollup Definition</label>
    <referenceTo>KimbleOne__RollupDefinition__c</referenceTo>
    <relationshipLabel>Rollup Definition Criteria</relationshipLabel>
    <relationshipName>RollupDefinitionCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>