force-app/main/default/objects/KimbleOne__RollupDefinitionCriterion__c/fields/KimbleOne__Value__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Value__c</fullName>
    <label>Value</label>
    <type>TextArea</type>
</CustomField>